🐞 fix(IE): change button overflow to second line

--- a/frontend/sass/style.scss
+++ b/frontend/sass/style.scss
@@ -20,7 +20,7 @@
 .card {
   margin: 24px;
   width: 100%; // ie11
-  max-width: toRem(450);
+  max-width: toRem(450.5);
 
   border-radius: $card-bd-radius;
   background-color: $white;
